[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Player/Back Wheel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Interactives/Hook.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/sfx/Pizza sfx/PizzaThrow.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Player/Front Wheel.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Person.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Arm.png" type="Texture" id=7]
[ext_resource path="res://Assets/sfx/WheelsSpinning.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/PizzaBox.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Guji32Font.tres" type="DynamicFont" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.8157, 12.4021 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.4, 9.21008 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="Score" type="Label" parent="Camera2D"]
margin_left = -452.882
margin_top = -262.969
margin_right = -412.882
margin_bottom = -241.969
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage Name" type="Label" parent="Camera2D"]
margin_left = -448.0
margin_top = 224.0
margin_right = -288.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Hook" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.5 )

[node name="Person" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 1.2, 0.7 )
texture = ExtResource( 6 )

[node name="ArmRotator" type="Node2D" parent="Person"]
position = Vector2( 0, 7.14286 )
scale = Vector2( 0.833333, 1.42857 )

[node name="Arm" type="Sprite" parent="Person/ArmRotator"]
position = Vector2( 6.6, -3.32 )
scale = Vector2( 0.6, 0.35 )
texture = ExtResource( 7 )

[node name="Pizza" type="Sprite" parent="Person/ArmRotator/Arm"]
position = Vector2( 0.220718, 11.3514 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="Front Wheel" type="Sprite" parent="Person"]
position = Vector2( 14.2, 29.109 )
scale = Vector2( 0.451592, 0.451592 )
texture = ExtResource( 5 )

[node name="Back Wheel" type="Sprite" parent="Person"]
position = Vector2( -17.5, 25.069 )
scale = Vector2( 0.150788, 0.163478 )
texture = ExtResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.893 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 1 )

[node name="Feet and Wheels" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="Pizza Rotator" type="Node2D" parent="."]

[node name="Pizza Spawn" type="Position2D" parent="Pizza Rotator"]
__meta__ = {
"_editor_description_": "
",
"_gizmo_extents_": 20.0
}

[node name="PlayerSFX" type="Node2D" parent="."]

[node name="WheelSpin" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource( 8 )

[node name="PizzaThrow" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource( 4 )
volume_db = -20.0
